message MeasuredData {
    required string shotId = 1;
    required double samplingRate = 2;
    required uint32 channels = 3;
    required bool hasExternalData = 4;
    repeated DataSet inlineData = 5;
    repeated string channelNames = 6; //ordered!
}

message DataSet {
    required int64 timeSecs = 1;
    required int64 timeNanosecs = 2;
    repeated DataPoints channelData = 3;
}

message DataPoints {
    repeated double dataPoints = 1 [packed=true];
    optional uint32 channel = 2;
    optional string channelName = 3;
}
